# rpm-sequoia

./: .codespellrc  .gitlab-ci.yml  Cargo.toml  LICENSE.txt  Makefile  README.md  build.rs  deny.toml  openpgp-policy.toml  rpm-sequoia.pc.in
.cargo/: config.toml
.ci/: all_commits.sh
.github/workflows/: authenticate-commits.yml  ci.yml  fast-forward.yml  pull-request.yml
doc/: release-checklist.md
src/: digest.rs  ffi.rs  lib.rs  log.rs  rpm.rs  symbols.txt
tests/: Dockerfile  rpm.patch  symbols.rs
