[package]
name = "rpm-sequoia"
description = "An implementation of the RPM PGP interface using Sequoia."
version = "1.0.0"
authors = ["Neal H. Walfield <neal@pep.foundation>"]
homepage = "https://sequoia-pgp.org/"
repository = "https://github.com/rpm-software-management/rpm-sequoia"
readme = "README.md"
keywords = ["cryptography", "openpgp", "pgp", "signing"]
categories = ["cryptography", "authentication"]
license = "LGPL-2.0-or-later"
edition = "2021"
build = "build.rs"

[badges]
maintenance = { status = "actively-developed" }
gitlab = { repository = "sequoia-pgp/rpm-sequoia" }

[dependencies]
anyhow = "1"
buffered-reader = { version = "1", default-features = false }
chrono = { version = "0.4", default-features = false, features = [ "std" ] }
lazy_static = "1"
libc = "0.2"
sequoia-openpgp = { version = "1.8", default-features = false }
thiserror = "1"

[build-dependencies]
anyhow = "1"
cdylib-link-lines = "0.1.4"

[dev-dependencies]
assert_cmd = "2.0"

[lib]
crate-type = ["cdylib"]

[features]
default = [
    # We explicitly do not want to enable Sequoia's decompression support.
    "crypto-nettle",
]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
